# workshop-rag-optimization

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: .env.example  00-set-up-environment.ipynb  01-semantic-search-rag.ipynb  02-tweaking-semantic-search.ipynb  03-hybrid-search.ipynb  04-rag-services-with-haystack-and-qdrant.ipynb  05-solution-rag-services-with-haystack-and-qdrant.ipynb  06-using-hyde-for-improved-retrieval.ipynb  env.example
